# noadd

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  codecov.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
docs/superpowers/plans/: 2026-03-19-noadd-implementation.md  2026-03-27-merge-filters-page.md  2026-03-27-upstream-strategy.md  2026-04-06-stats-page.md  2026-04-14-dashboard-rate-windows.md  2026-04-16-db-reader-connection.md  2026-04-19-browse-filter-lists-registry.md  2026-06-08-onboarding-guidance.md  2026-06-10-slim-admin-ui.md  2026-06-12-admin-ui-chart-linechart-and-outcomes-scroll.md  2026-06-12-admin-ui-phosphor-redesign.md  2026-06-13-admin-ui-chart-fill-and-login-error.md  2026-06-13-admin-ui-fix-yaxis-label-squish.md  2026-06-13-charts-axis-legend-tz.md  2026-06-13-readme-screenshots-pipeline.md  2026-06-13-static-asset-etag.md  2026-06-23-multi-user-accounts.md  2026-06-28-configurable-upstream.md  2026-06-28-dnssec-transparency.md  2026-07-10-programmatic-api.md  2026-07-11-configurable-block-mode.md  2026-07-11-unify-settings-save-model.md
docs/superpowers/specs/: 2026-03-19-noadd-doh-adblock-dns-design.md  2026-03-27-merge-filters-page-design.md  2026-03-27-upstream-strategy-design.md  2026-03-29-cache-upstream-ttl-design.md  2026-04-06-stats-page-design.md  2026-04-14-dashboard-rate-windows-design.md  2026-04-16-db-reader-connection-design.md  2026-04-19-browse-filter-lists-registry-design.md  2026-06-10-slim-admin-ui-design.md  2026-06-13-static-asset-etag-design.md  2026-06-23-multi-user-accounts-design.md  2026-06-28-configurable-upstream-design.md  2026-06-28-dnssec-transparency-design.md  2026-07-10-programmatic-api-design.md  2026-07-11-configurable-block-mode-design.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.js
e2e/features/: custom-rules.feature  dashboard.feature  filter-lists.feature  onboarding.feature  setup-and-auth.feature
e2e/screenshots/: capture.mjs  seed.mjs
e2e/specs/: chart-touch.spec.js  settings-autosave.spec.js
e2e/steps/: auth.steps.js  common.steps.js  dashboard.steps.js  filters.steps.js  fixtures.js  onboarding.steps.js  rules.steps.js
e2e/support/: auth.setup.js
lists/: urlhaus.txt
scripts/: bench-doh.py  fuzz-doh.py
src/: cache.rs  config.rs  db.rs  lib.rs  logger.rs  main.rs  net.rs  registry.rs  shutdown.rs  tls.rs
src/admin/: api.rs  auth.rs  csrf.rs  forward_auth.rs  mod.rs  stats.rs
src/dns/: block.rs  doh.rs  handler.rs  inflight.rs  mod.rs  ratelimit.rs  tcp.rs  udp.rs
src/filter/: engine.rs  lists.rs  mod.rs  parser.rs  rebuild.rs
src/upstream/: forwarder.rs  mod.rs  strategy.rs
tests/: admin_api_test.rs  admin_auth_test.rs  api_key_auth.rs  cache_hit_bench.rs  cache_test.rs  coalescing_test.rs  csrf_test.rs  db_concurrency_test.rs  db_test.rs  doh_test.rs  filter_engine_test.rs  filter_lists_test.rs  filter_parser_test.rs  forward_auth_test.rs  handler_test.rs  inflight_contention_test.rs  integration_test.rs  logger_test.rs  rebuild_coordinator_test.rs  registry_test.rs  stale_stampede_test.rs  stats_api_test.rs  stats_db_test.rs  stats_parallel_bench.rs  tcp_test.rs  trusted_proxies_test.rs  upstream_test.rs
tests/common/: mod.rs
