[package]
name = "noadd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "env"] }
hickory-proto = "0.25"
hickory-resolver = { version = "0.25", default-features = false, features = ["https-aws-lc-rs", "tls-aws-lc-rs", "tokio"] }
include_dir = "0.7"
mime_guess = "2"
moka = { version = "0.12", default-features = false, features = ["future"] }
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
rusqlite = "0.37"
rustls = { version = "0.23", default-features = false }
rustls-acme = { version = "0.15", default-features = false, features = ["aws-lc-rs", "axum", "webpki-roots"] }
tokio-stream = "0.1"
rustls-pemfile = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal", "io-util"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "json"] }
time = "0.3.47"
plist = "1.8.0"
uuid = { version = "1.23.0", features = ["v5"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = "0.5"
