[package]
name = "noadd"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"

[dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "env"] }
dashmap = "6"
hickory-proto = "0.26"
hickory-resolver = { version = "0.26", default-features = false, features = ["https-aws-lc-rs", "tls-aws-lc-rs", "tokio", "webpki-roots"] }
include_dir = "0.7"
mime_guess = "2"
moka = { version = "0.12", default-features = false, features = ["future"] }
parking_lot = "0.12"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
rusqlite = "0.37"
rustls = { version = "0.23", default-features = false }
rustls-acme = { version = "0.15", default-features = false, features = ["aws-lc-rs", "axum", "webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rustls-pemfile = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal", "io-util"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "json"] }
time = "0.3.47"
plist = "1.10.0"
uuid = { version = "1.23.0", features = ["v5"] }
fst = "0.4.7"
mimalloc = "0.1"
libmimalloc-sys = { version = "0.1", features = ["extended"] }
blake2 = "0.10"
utoipa = "5"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[build-dependencies]
resvg = { version = "0.47", default-features = false }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
# https://github.com/EmbarkStudios/rust-ecosystem/blob/732513edfd9172f4eda358b2d0cefc6cad1585ee/lints.rs
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
