[package]
name = "noadd"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"

[dependencies]
anyhow = "1"
arc-swap = "1"
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false, features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "env"] }
dashmap = "6"
hickory-proto = "0.26"
hickory-resolver = { version = "0.26", default-features = false, features = ["https-aws-lc-rs", "tls-aws-lc-rs", "tokio", "webpki-roots"] }
include_dir = "0.7"
mime_guess = "2"
moka = { version = "0.12", default-features = false, features = ["future"] }
parking_lot = "0.12"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
rusqlite = "0.37"
rustls = { version = "0.23", default-features = false }
rustls-acme = { version = "0.15", default-features = false, features = ["aws-lc-rs", "axum", "webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rustls-pemfile = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal", "io-util"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "json"] }
time = "0.3.47"
plist = "1.10.0"
uuid = { version = "1.23.0", features = ["v5"] }
fst = "0.4.7"
mimalloc = "0.1"
libmimalloc-sys = { version = "0.1", features = ["extended"] }
blake2 = "0.10"
utoipa = "5"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[build-dependencies]
resvg = { version = "0.47", default-features = false }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
# Self-maintained lint set (originally seeded from Embark Studios' rust-ecosystem
# list). The bulk of the old itemised pedantic lints are now covered by the
# `pedantic` group; only the noisy/low-signal ones are opted back out, plus the
# restriction and nursery lints that have no safe umbrella group.
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
# Groups (priority -1 so the individual entries below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Opt out of the noisy / low-signal pedantic lints.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
duration_suboptimal_units = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# Restriction lints (no safe umbrella group — kept itemised).
dbg_macro = "warn"
exit = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"

# Nursery picks (the nursery group as a whole is too unstable to enable).
debug_assert_with_mut_call = "warn"
fallible_impl_from = "warn"
trait_duplication_in_bounds = "warn"
